[gd_scene load_steps=48 format=3 uid="uid://cpqb4vujhot7p"]

[ext_resource type="Script" uid="uid://blviw7st6y6os" path="res://Scenes/baklava.gd" id="1_nl0my"]
[ext_resource type="Texture2D" uid="uid://ddbty680kwg61" path="res://Assets/MiniGames/Baklava/Baklava alt.png" id="2_akf64"]
[ext_resource type="Script" uid="uid://kentbhxnf431" path="res://Scenes/area_2d.gd" id="2_wy1mf"]
[ext_resource type="Texture2D" uid="uid://b3t8ythsrmyg3" path="res://Assets/MiniGames/Baklava/Baklava orta.png" id="3_f1l4f"]
[ext_resource type="Script" uid="uid://c8i8plsh4sepb" path="res://Scenes/dondurma.gd" id="4_g1jro"]
[ext_resource type="Texture2D" uid="uid://d2okyyqclu1kf" path="res://Assets/MiniGames/Baklava/Baklava ust.png" id="4_p1p0h"]
[ext_resource type="Texture2D" uid="uid://38wno2iew54s" path="res://Assets/MiniGames/Dondurma/dondurma.png" id="5_1tl6p"]
[ext_resource type="AudioStream" uid="uid://dm2ymvvknu5sx" path="res://Assets/SFX/Shlop2.mp3" id="6_k3tl1"]
[ext_resource type="Script" uid="uid://b2rqmms77t8hk" path="res://Scenes/vazelin.gd" id="6_qt7vf"]
[ext_resource type="Texture2D" uid="uid://dgh6i627pih3m" path="res://Assets/MiniGames/Vazelin/açılma_animasyon/Adsız_Resim-1 2.png" id="7_0b776"]
[ext_resource type="AudioStream" uid="uid://cej5wos51y2qe" path="res://Assets/SFX/Shlop1.mp3" id="7_hr8bw"]
[ext_resource type="Script" uid="uid://nrj3d143jdoo" path="res://Scenes/tarçın.gd" id="8_hmlvj"]
[ext_resource type="Texture2D" uid="uid://badtfllr4sfh7" path="res://Assets/MiniGames/Vazelin/açılma_animasyon/Adsız_Resim-2 2.png" id="8_jxikw"]
[ext_resource type="Texture2D" uid="uid://dxu8i5yqe7nhd" path="res://Assets/MiniGames/Vazelin/açılma_animasyon/Adsız_Resim-3 2.png" id="9_f1y0d"]
[ext_resource type="Texture2D" uid="uid://rmi4jrcxnare" path="res://Assets/defter.png" id="10_f1y0d"]
[ext_resource type="Texture2D" uid="uid://6o1w8k3uedw1" path="res://Assets/MiniGames/Vazelin/açılma_animasyon/Adsız_Resim-4 2.png" id="10_xk3ca"]
[ext_resource type="Texture2D" uid="uid://bq75xg10k1xq6" path="res://Assets/MiniGames/Vazelin/açılma_animasyon/Adsız_Resim-5 2.png" id="11_nuoqs"]
[ext_resource type="Script" uid="uid://c8d4ayn0kwjn3" path="res://Scenes/ajanda.gd" id="11_xk3ca"]
[ext_resource type="Texture2D" uid="uid://dehrmjddyvk5o" path="res://Assets/MiniGames/Vazelin/açılma_animasyon/Adsız_Resim-6 2.png" id="12_k3tl1"]
[ext_resource type="Texture2D" uid="uid://lidiyaxm6vmo" path="res://Assets/El.png" id="12_nl0my"]
[ext_resource type="Texture2D" uid="uid://b5g0n6yygvy42" path="res://Assets/MiniGames/Vazelin/vazelin_açık.png" id="13_hr8bw"]
[ext_resource type="Texture2D" uid="uid://sxjcdr1tiwai" path="res://Assets/MiniGames/Vazelin/bulamaç.png" id="13_k3tl1"]
[ext_resource type="AudioStream" uid="uid://cnw8akarupicd" path="res://Assets/SFX/KapakAçma.mp3" id="14_hmlvj"]
[ext_resource type="Texture2D" uid="uid://dc034scohs2o1" path="res://Assets/MiniGames/Tarçın/0.png" id="16_xk3ca"]
[ext_resource type="Texture2D" uid="uid://cmua6t4py8cmu" path="res://Assets/MiniGames/Tarçın/1.png" id="17_nuoqs"]
[ext_resource type="AudioStream" uid="uid://c3c5estf4fysq" path="res://Assets/SFX/Krem.mp3" id="17_tqp7v"]
[ext_resource type="Texture2D" uid="uid://cnsvhd3txvf6g" path="res://Assets/MiniGames/Tarçın/2.png" id="18_k3tl1"]
[ext_resource type="Texture2D" uid="uid://dr8d4x8l4uvle" path="res://Assets/MiniGames/Tarçın/3.png" id="19_hr8bw"]
[ext_resource type="AudioStream" uid="uid://bqpq0ctlvinan" path="res://Assets/SFX/Shaker.mp3" id="20_nuoqs"]
[ext_resource type="Script" uid="uid://de8hgvnhx3knk" path="res://Scenes/el.gd" id="25_sogof"]
[ext_resource type="Texture2D" uid="uid://5cei0u3ul021" path="res://Assets/MiniGames/Krem/Adsız_Resim-1.png" id="28_s2ipq"]
[ext_resource type="Texture2D" uid="uid://cxr7rb8o7sefl" path="res://Assets/MiniGames/Krem/Adsız_Resim-2.png" id="29_tqp7v"]
[ext_resource type="Texture2D" uid="uid://cxhb8onipkksk" path="res://Assets/MiniGames/Krem/Adsız_Resim-3.png" id="30_1t4g6"]
[ext_resource type="Texture2D" uid="uid://55umlnncd4a2" path="res://Assets/MiniGames/Krem/Adsız_Resim-4.png" id="31_akf64"]
[ext_resource type="Texture2D" uid="uid://gnhgrgnpn3av" path="res://Assets/MiniGames/Krem/Adsız_Resim-5.png" id="32_f1l4f"]
[ext_resource type="Texture2D" uid="uid://d4d84mp0teklh" path="res://Assets/MiniGames/Krem/Adsız_Resim-6.png" id="33_p1p0h"]

[sub_resource type="GDScript" id="GDScript_fmtew"]
script/source = "extends Node2D
@onready var dondurma = $Dondurma
@onready var vazelin = $Vazelin
@onready var tarcin = $Tarçın
@onready var baklava = $Baklava

@onready var treatment_order = [vazelin, tarcin, dondurma, baklava]
"

[sub_resource type="RectangleShape2D" id="RectangleShape2D_3cw2a"]
size = Vector2(125, 57.6087)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_8v4gn"]
size = Vector2(79, 118)

[sub_resource type="SpriteFrames" id="SpriteFrames_sogof"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("7_0b776")
}, {
"duration": 1.0,
"texture": ExtResource("8_jxikw")
}, {
"duration": 1.0,
"texture": ExtResource("9_f1y0d")
}, {
"duration": 1.0,
"texture": ExtResource("10_xk3ca")
}, {
"duration": 1.0,
"texture": ExtResource("11_nuoqs")
}, {
"duration": 1.0,
"texture": ExtResource("12_k3tl1")
}, {
"duration": 1.0,
"texture": ExtResource("13_hr8bw")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_nl0my"]
size = Vector2(177, 85)

[sub_resource type="SpriteFrames" id="SpriteFrames_mwpae"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("16_xk3ca")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("17_nuoqs")
}, {
"duration": 1.0,
"texture": ExtResource("18_k3tl1")
}, {
"duration": 1.0,
"texture": ExtResource("19_hr8bw")
}],
"loop": true,
"name": &"dökülme",
"speed": 5.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_l73u3"]
size = Vector2(73, 112)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_fmy4g"]
size = Vector2(750.002, 1020.84)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_d6v16"]
size = Vector2(412, 580)

[sub_resource type="SpriteFrames" id="SpriteFrames_ch8qn"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("28_s2ipq")
}, {
"duration": 1.0,
"texture": ExtResource("29_tqp7v")
}, {
"duration": 1.0,
"texture": ExtResource("30_1t4g6")
}, {
"duration": 1.0,
"texture": ExtResource("31_akf64")
}, {
"duration": 1.0,
"texture": ExtResource("32_f1l4f")
}, {
"duration": 1.0,
"texture": ExtResource("33_p1p0h")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_fmtew"]
size = Vector2(868, 668)

[node name="Elde Egzema" type="Node2D"]
script = SubResource("GDScript_fmtew")

[node name="Baklava" type="Node2D" parent="."]
position = Vector2(111, 121)
script = ExtResource("1_nl0my")

[node name="Sprite2D" type="Sprite2D" parent="Baklava"]
position = Vector2(1, 1)
scale = Vector2(0.078462, 0.078462)
texture = ExtResource("2_akf64")
offset = Vector2(63.1067, 157.766)

[node name="Sprite2D" type="Sprite2D" parent="Baklava/Sprite2D"]
position = Vector2(50.9801, 152.94)
texture = ExtResource("3_f1l4f")

[node name="Sprite2D2" type="Sprite2D" parent="Baklava/Sprite2D"]
position = Vector2(63.7251, 152.94)
texture = ExtResource("4_p1p0h")

[node name="Area2D" type="Area2D" parent="Baklava"]
position = Vector2(2, 1)
scale = Vector2(0.720001, 0.92)
script = ExtResource("2_wy1mf")

[node name="CollisionShape2D" type="CollisionShape2D" parent="Baklava/Area2D"]
position = Vector2(-2.77778, 9.53674e-07)
shape = SubResource("RectangleShape2D_3cw2a")

[node name="Dondurma" type="Node2D" parent="."]
z_index = 2
position = Vector2(116, 266)
script = ExtResource("4_g1jro")

[node name="Sprite2D" type="Sprite2D" parent="Dondurma"]
position = Vector2(-9.53674e-07, -1.90735e-06)
scale = Vector2(0.0926356, 0.0926356)
texture = ExtResource("5_1tl6p")

[node name="Area2D" type="Area2D" parent="Dondurma"]
position = Vector2(0, 1)
script = ExtResource("2_wy1mf")

[node name="CollisionShape2D" type="CollisionShape2D" parent="Dondurma/Area2D"]
position = Vector2(0, -6)
shape = SubResource("RectangleShape2D_8v4gn")

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="Dondurma"]
stream = ExtResource("6_k3tl1")

[node name="AudioStreamPlayer2D2" type="AudioStreamPlayer2D" parent="Dondurma"]
stream = ExtResource("7_hr8bw")

[node name="Vazelin" type="Node2D" parent="."]
position = Vector2(123, 420)
script = ExtResource("6_qt7vf")

[node name="Sprite2D" type="AnimatedSprite2D" parent="Vazelin"]
position = Vector2(0, -1)
scale = Vector2(0.173332, 0.173332)
sprite_frames = SubResource("SpriteFrames_sogof")
speed_scale = 1.32
offset = Vector2(584.078, -531.468)

[node name="Area2D" type="Area2D" parent="Vazelin"]
script = ExtResource("2_wy1mf")

[node name="CollisionShape2D" type="CollisionShape2D" parent="Vazelin/Area2D"]
position = Vector2(-1, 0)
shape = SubResource("RectangleShape2D_nl0my")

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="Vazelin"]
stream = ExtResource("14_hmlvj")
volume_db = 2.125

[node name="AudioStreamPlayer2D2" type="AudioStreamPlayer2D" parent="Vazelin"]
stream = ExtResource("17_tqp7v")

[node name="Tarçın" type="Node2D" parent="."]
position = Vector2(121, 563)
script = ExtResource("8_hmlvj")

[node name="Sprite2D" type="AnimatedSprite2D" parent="Tarçın"]
position = Vector2(0, 2)
scale = Vector2(0.150597, 0.150597)
sprite_frames = SubResource("SpriteFrames_mwpae")
offset = Vector2(-643.008, 388.071)

[node name="Area2D" type="Area2D" parent="Tarçın"]
script = ExtResource("2_wy1mf")

[node name="CollisionShape2D" type="CollisionShape2D" parent="Tarçın/Area2D"]
position = Vector2(-1, -1)
shape = SubResource("RectangleShape2D_l73u3")

[node name="CPUParticles2D" type="CPUParticles2D" parent="Tarçın"]
position = Vector2(-53, 44)
emitting = false
amount = 40
lifetime = 0.3
one_shot = true
explosiveness = 0.82
emission_shape = 1
emission_sphere_radius = 1.0
direction = Vector2(-1, 0)
initial_velocity_min = 161.62
initial_velocity_max = 202.02
scale_amount_min = 1.9
scale_amount_max = 1.9
color = Color(0.708727, 0.346221, 0.103903, 1)

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="Tarçın"]
stream = ExtResource("20_nuoqs")
volume_db = 5.0

[node name="Ajanda" type="Node2D" parent="."]
position = Vector2(1474, 312)
scale = Vector2(0.439999, 0.439999)

[node name="Sprite2D" type="Sprite2D" parent="Ajanda"]
position = Vector2(240.91, 63.6365)
scale = Vector2(1.18182, 1.18182)
texture = ExtResource("10_f1y0d")

[node name="Area2D" type="Area2D" parent="Ajanda"]
script = ExtResource("11_xk3ca")

[node name="CollisionShape2D" type="CollisionShape2D" parent="Ajanda/Area2D"]
position = Vector2(250, 60.4171)
shape = SubResource("RectangleShape2D_fmy4g")

[node name="AjandaText" type="RichTextLabel" parent="Ajanda"]
offset_left = -29.5457
offset_top = -404.546
offset_right = 539.454
offset_bottom = 45.4536
scale = Vector2(1.13498, 1.13498)
mouse_filter = 2
theme_override_colors/default_color = Color(0, 0, 0, 1)
theme_override_font_sizes/bold_italics_font_size = 45
theme_override_font_sizes/normal_font_size = 32
text = "MALZEMELER:
BAKLAVA
DONDURMA
VAZELİN
TARÇIN

1- VAZELİNİ UYGULA
2- TARÇINI DÖK
3- DONDURMAYI BULA
4- BAKLAVANIN KATLARINI YAPIŞTIR"
fit_content = true
metadata/_edit_use_anchors_ = true

[node name="El" type="Node2D" parent="."]
z_index = -1
position = Vector2(-71, 850)
scale = Vector2(1.18544, 1.18544)
script = ExtResource("25_sogof")

[node name="Sprite2D" type="Sprite2D" parent="El"]
clip_children = 2
position = Vector2(621, 294)
scale = Vector2(0.24, 0.24)
texture = ExtResource("12_nl0my")

[node name="Bulamaç" type="Sprite2D" parent="El/Sprite2D"]
position = Vector2(-66.6667, 107.5)
scale = Vector2(1e-05, 1e-05)
texture = ExtResource("13_k3tl1")

[node name="Area2D" type="Area2D" parent="El"]

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="El/Area2D"]
polygon = PackedVector2Array(460, 254, 454, 280, 496, 383, 558, 495, 563, 572, 711, 578, 711, 514, 734, 401, 760, 312, 760, 255, 779, 136, 764, 126, 748, 156, 726, 239, 729, 194, 737, 54, 719, 43, 703, 65, 681, 225, 666, 39, 647, 24, 632, 41, 624, 221, 601, 41, 584, 32, 572, 44, 568, 252, 552, 292, 527, 305, 502, 226, 464, 200, 449, 204, 443, 217)

[node name="TarçınAlan" type="Area2D" parent="El"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="El/TarçınAlan"]
position = Vector2(646, 284)
shape = SubResource("RectangleShape2D_d6v16")

[node name="kremasyon" type="AnimatedSprite2D" parent="El"]
visible = false
position = Vector2(635.208, 359.36)
scale = Vector2(0.402576, 0.402576)
sprite_frames = SubResource("SpriteFrames_ch8qn")

[node name="MasaSınır" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="MasaSınır"]
position = Vector2(727, 325)
shape = SubResource("RectangleShape2D_fmtew")

[node name="Instruction" type="RichTextLabel" parent="."]
offset_left = 237.0
offset_top = 62.0
offset_right = 368.0
offset_bottom = 161.0
text = "\"Açmak için E\""
metadata/_edit_use_anchors_ = true

[connection signal="mouse_entered" from="Baklava/Area2D" to="Baklava/Area2D" method="_on_mouse_entered"]
[connection signal="mouse_exited" from="Baklava/Area2D" to="Baklava/Area2D" method="_on_mouse_exited"]
[connection signal="mouse_entered" from="Dondurma/Area2D" to="Dondurma/Area2D" method="_on_mouse_entered"]
[connection signal="mouse_exited" from="Dondurma/Area2D" to="Dondurma/Area2D" method="_on_mouse_exited"]
[connection signal="mouse_entered" from="Vazelin/Area2D" to="Vazelin/Area2D" method="_on_mouse_entered"]
[connection signal="mouse_exited" from="Vazelin/Area2D" to="Vazelin/Area2D" method="_on_mouse_exited"]
[connection signal="mouse_entered" from="Tarçın/Area2D" to="Tarçın/Area2D" method="_on_mouse_entered"]
[connection signal="mouse_exited" from="Tarçın/Area2D" to="Tarçın/Area2D" method="_on_mouse_exited"]
[connection signal="mouse_entered" from="Ajanda/Area2D" to="Ajanda/Area2D" method="_on_mouse_entered"]
[connection signal="mouse_exited" from="Ajanda/Area2D" to="Ajanda/Area2D" method="_on_mouse_exited"]
[connection signal="mouse_entered" from="El/Area2D" to="Baklava" method="_on_area_2d_mouse_entered"]
[connection signal="mouse_entered" from="El/Area2D" to="Dondurma" method="_on_area_2d_mouse_entered"]
[connection signal="mouse_entered" from="El/Area2D" to="Vazelin" method="_on_area_2d_mouse_entered"]
[connection signal="mouse_entered" from="El/Area2D" to="Tarçın" method="_on_area_2d_mouse_entered"]
[connection signal="mouse_exited" from="El/Area2D" to="Baklava" method="_on_area_2d_mouse_exited"]
[connection signal="mouse_exited" from="El/Area2D" to="Dondurma" method="_on_area_2d_mouse_exited"]
[connection signal="mouse_exited" from="El/Area2D" to="Vazelin" method="_on_area_2d_mouse_exited"]
[connection signal="mouse_exited" from="El/Area2D" to="Tarçın" method="_on_area_2d_mouse_exited"]
